--- a/Telco_customer_churn_prediction.ipynb
+++ b/Telco_customer_churn_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSmI9YxSzBsMY76QCgQQE/",
+      "authorship_tag": "ABX9TyMtoCRZOqB2B83NOPKgOywT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "xgraSkNqRSqp"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -44,7 +44,10 @@
         "id": "_oMyfy5pRJrG"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     }
   ]
 }
