--- a/Telco_customer_churn_prediction.ipynb
+++ b/Telco_customer_churn_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+uUm8hrmQhNNDGJ2Mb/cn",
+      "authorship_tag": "ABX9TyPFjX5h3D5OqddolVkfzCgG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1302,12 +1302,143 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# --- Step 1: Final Preprocessing (Encoding and Scaling) ---\n",
+        "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# 1. Label Encoding for Binary Categorical Columns (already done for Churn)\n",
+        "# Identify binary columns that still need encoding (excluding the columns simplified earlier)\n",
+        "binary_cols_to_encode = ['gender', 'Partner', 'Dependents', 'PhoneService', 'PaperlessBilling']\n",
+        "\n",
+        "for col in binary_cols_to_encode:\n",
+        "    # We use LabelEncoder for object type columns\n",
+        "    if df[col].dtype == 'object':\n",
+        "        le = LabelEncoder()\n",
+        "        df[col] = le.fit_transform(df[col])\n",
+        "\n",
+        "# 2. One-Hot Encoding for Multi-Category Columns\n",
+        "multi_cols = ['MultipleLines', 'InternetService', 'OnlineSecurity', 'OnlineBackup',\n",
+        "              'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies',\n",
+        "              'Contract', 'PaymentMethod']\n",
+        "\n",
+        "# Use get_dummies for One-Hot Encoding. drop_first=True reduces multicollinearity.\n",
+        "df_encoded = pd.get_dummies(df, columns=multi_cols, drop_first=True)\n",
+        "\n",
+        "# 3. Separate Features (X) and Target (y)\n",
+        "X = df_encoded.drop('Churn', axis=1)\n",
+        "y = df_encoded['Churn']\n",
+        "\n",
+        "# 4. Split data into Training and Testing sets (Stratified to handle class imbalance)\n",
+        "# Use a 75/25 split. stratify=y ensures both sets have the same Churn ratio (approx 26.5%).\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42, stratify=y)\n",
+        "\n",
+        "# 5. Feature Scaling (Crucial for Neural Network)\n",
+        "# Identify Numerical Columns for Scaling\n",
+        "scaling_cols = ['tenure', 'MonthlyCharges', 'TotalCharges']\n",
+        "\n",
+        "# Initialize and Fit Scaler\n",
+        "scaler = StandardScaler()\n",
+        "# Fit scaler ONLY on training data to prevent data leakage\n",
+        "scaler.fit(X_train[scaling_cols])\n",
+        "\n",
+        "# Transform both Training and Testing data\n",
+        "X_train[scaling_cols] = scaler.transform(X_train[scaling_cols])\n",
+        "X_test[scaling_cols] = scaler.transform(X_test[scaling_cols])\n",
+        "\n",
+        "print(\"Preprocessing (Encoding and Scaling) Complete.\")\n",
+        "print(f\"Final training set shape: {X_train.shape}\")"
+      ],
       "metadata": {
-        "id": "VsBYw-7Gc5Bh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VsBYw-7Gc5Bh",
+        "outputId": "a9d519f6-d869-48e0-868f-5b60389346d9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Preprocessing (Encoding and Scaling) Complete.\n",
+            "Final training set shape: (5265, 23)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Step 2: Decision Tree Model Implementation & Tuning ---\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.metrics import roc_auc_score, classification_report\n",
+        "\n",
+        "# Define the parameter grid for hyperparameter tuning\n",
+        "dt_param_grid = {\n",
+        "    'max_depth': [3, 5, 7, 9],            # Depth controls model complexity and prevents overfitting\n",
+        "    'min_samples_split': [2, 10, 20],     # Minimum number of samples required to split an internal node\n",
+        "    'criterion': ['gini', 'entropy']      # Function to measure the quality of a split\n",
+        "}\n",
+        "\n",
+        "# Initialize the Decision Tree model\n",
+        "dt_model = DecisionTreeClassifier(random_state=42)\n",
+        "\n",
+        "# Initialize Grid Search with 5-fold Cross-Validation (cv=5)\n",
+        "# Scoring is set to 'roc_auc' due to class imbalance\n",
+        "dt_grid = GridSearchCV(dt_model, dt_param_grid, cv=5, scoring='roc_auc', n_jobs=-1)\n",
+        "\n",
+        "# Fit the model and perform tuning on the training data\n",
+        "dt_grid.fit(X_train, y_train)\n",
+        "\n",
+        "# Get the best model\n",
+        "best_dt_model = dt_grid.best_estimator_\n",
+        "\n",
+        "print(\"\\nDecision Tree Best Parameters:\", dt_grid.best_params_)\n",
+        "print(\"Decision Tree Best AUC Score (on Cross-Validation):\", dt_grid.best_score_)\n",
+        "\n",
+        "# Evaluation on Test Set\n",
+        "dt_predictions = best_dt_model.predict(X_test)\n",
+        "dt_proba = best_dt_model.predict_proba(X_test)[:, 1]\n",
+        "\n",
+        "print(\"\\n--- Decision Tree Test Set Results ---\")\n",
+        "print(\"AUC Score:\", roc_auc_score(y_test, dt_proba))\n",
+        "print(\"Classification Report:\\n\", classification_report(y_test, dt_predictions))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uNSaiRvEh3X_",
+        "outputId": "e33dde08-a532-4b5d-9cd6-89a7d986cebe"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Decision Tree Best Parameters: {'criterion': 'entropy', 'max_depth': 5, 'min_samples_split': 2}\n",
+            "Decision Tree Best AUC Score (on Cross-Validation): 0.8236547738053618\n",
+            "\n",
+            "--- Decision Tree Test Set Results ---\n",
+            "AUC Score: 0.8269256432155441\n",
+            "Classification Report:\n",
+            "               precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.83      0.90      0.87      1292\n",
+            "           1       0.64      0.48      0.55       464\n",
+            "\n",
+            "    accuracy                           0.79      1756\n",
+            "   macro avg       0.74      0.69      0.71      1756\n",
+            "weighted avg       0.78      0.79      0.78      1756\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
