--- a/Telco_customer_churn_prediction.ipynb
+++ b/Telco_customer_churn_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFjX5h3D5OqddolVkfzCgG",
+      "authorship_tag": "ABX9TyNUEEwsXonHvlKTccJy2GGy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1436,6 +1436,93 @@
             "   macro avg       0.74      0.69      0.71      1756\n",
             "weighted avg       0.78      0.79      0.78      1756\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Step 3: Neural Network Model Implementation & Tuning ---\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "\n",
+        "# Assuming scikit-learn and scikeras are now in compatible versions from previous runs.\n",
+        "# Removed pip installation commands to avoid further dependency conflicts.\n",
+        "from scikeras.wrappers import KerasClassifier\n",
+        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "\n",
+        "# Function to create the Keras model (required for tuning wrapper)\n",
+        "def create_nn_model(neurons=64, dropout_rate=0.2, learning_rate=0.001):\n",
+        "    model = Sequential()\n",
+        "    # Input layer and first hidden layer (size determined by tuning)\n",
+        "    model.add(Dense(neurons, input_dim=X_train.shape[1], activation='relu'))\n",
+        "    model.add(Dropout(dropout_rate))\n",
+        "    # Second hidden layer (optional for complexity)\n",
+        "    model.add(Dense(int(neurons/2), activation='relu'))\n",
+        "    # Output layer (1 neuron for binary classification, 'sigmoid' activation)\n",
+        "    model.add(Dense(1, activation='sigmoid'))\n",
+        "\n",
+        "    # Compile the model\n",
+        "    optimizer = Adam(learning_rate=learning_rate)\n",
+        "    model.compile(loss='binary_crossentropy', optimizer=optimizer, metrics=['AUC'])\n",
+        "    return model\n",
+        "\n",
+        "# Wrap the Keras model for use with Scikit-learn's tuning utilities\n",
+        "nn_model = KerasClassifier(model=create_nn_model, epochs=50, batch_size=32, verbose=0)\n",
+        "\n",
+        "# Parameter distribution for Randomized Search\n",
+        "nn_param_dist = {\n",
+        "    'model__neurons': [32, 64, 100],\n",
+        "    'model__dropout_rate': [0.1, 0.2, 0.3],\n",
+        "    'model__learning_rate': [0.001, 0.0005],\n",
+        "    'batch_size': [16, 32, 64],\n",
+        "    'epochs': [80, 120] # Increased epochs due to complex tuning\n",
+        "}\n",
+        "\n",
+        "# Initialize Randomized Search (n_iter=10 runs 10 random combinations)\n",
+        "nn_random = RandomizedSearchCV(nn_model, nn_param_dist, n_iter=10, cv=3, scoring='roc_auc', random_state=42, n_jobs=-1)\n",
+        "\n",
+        "# Fit the model and perform tuning\n",
+        "nn_random.fit(X_train, y_train, callbacks=[tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=10, verbose=0)])\n",
+        "\n",
+        "# Get the best model\n",
+        "best_nn_model = nn_random.best_estimator_\n",
+        "\n",
+        "print(\"\\nNeural Network Best Parameters:\", nn_random.best_params_)\n",
+        "print(\"Neural Network Best AUC Score (on Cross-Validation):\", nn_random.best_score_)\n",
+        "\n",
+        "\n",
+        "# Evaluation on Test Set\n",
+        "# Correcting to use probability of the positive class (Churn=1) for AUC\n",
+        "nn_proba = best_nn_model.predict_proba(X_test)[:, 1]\n",
+        "nn_predictions = (best_nn_model.predict(X_test) > 0.5).astype(int)\n",
+        "\n",
+        "print(\"\\n--- Neural Network Test Set Results ---\")\n",
+        "print(\"AUC Score:\", roc_auc_score(y_test, nn_proba))\n",
+        "print(\"Classification Report:\\n\", classification_report(y_test, nn_predictions))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "id": "zxDB1qRoiWqb",
+        "outputId": "98de7586-2e32-4983-fb32-85bf7303a5f6"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'X_train' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1439508281.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;31m# Fit the model and perform tuning\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m \u001b[0mnn_random\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEarlyStopping\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmonitor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'val_loss'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpatience\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;31m# Get the best model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
           ]
         }
       ]
