--- a/Telco_customer_churn_prediction.ipynb
+++ b/Telco_customer_churn_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5LxzJ54kcURZG3fy9TTS6",
+      "authorship_tag": "ABX9TyPiDUiP97OE2HSLt8SSODu9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1058,11 +1058,11 @@
         "df.info()"
       ],
       "metadata": {
-        "id": "IKUr2nvqIL_r",
-        "outputId": "fa0caa7d-7c57-4b27-9f58-10e64e73a032",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IKUr2nvqIL_r",
+        "outputId": "fa0caa7d-7c57-4b27-9f58-10e64e73a032"
       },
       "execution_count": 31,
       "outputs": [
@@ -1107,12 +1107,12 @@
         "df.describe()"
       ],
       "metadata": {
-        "id": "uTcNzP5uIRTJ",
-        "outputId": "c41fed1a-a150-4a7d-f6bf-fa2dfefa712b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "id": "uTcNzP5uIRTJ",
+        "outputId": "c41fed1a-a150-4a7d-f6bf-fa2dfefa712b"
       },
       "execution_count": 32,
       "outputs": [
@@ -1517,11 +1517,11 @@
         "df.shape"
       ],
       "metadata": {
-        "id": "eZBeibyhIV8x",
-        "outputId": "d9c516bd-d39f-4916-f3e6-cad5875c4e6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eZBeibyhIV8x",
+        "outputId": "d9c516bd-d39f-4916-f3e6-cad5875c4e6a"
       },
       "execution_count": 34,
       "outputs": [
@@ -1827,68 +1827,70 @@
         "#turnign categorical columns into numerical\n",
         "multi_cols = ['MultipleLines','InternetService','OnlineSecurity','OnlineBackup','DeviceProtection','TechSupport','StreamingTV','StreamingMovies','Contract','PaymentMethod']\n",
         "present_multi = [c for c in multi_cols if c in df.columns]\n",
-        "fd_encoded = pd.get_dummies(df, columns=present_multi, drop_first=True)"
+        "df_encoded = pd.get_dummies(df, columns=present_multi, drop_first=True)\n",
+        "\n",
+        "#Seperate features and targets\n",
+        "x= df_encoded.drop('Churn', axis= 1)\n",
+        "y = df_encoded['Churn']"
       ],
       "metadata": {
-        "id": "uie6sr1MN6kv"
+        "id": "nY8pesMPVB4T"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "# 2. One-Hot Encoding for Multi-Category Columns\n",
-        "multi_cols = ['MultipleLines', 'InternetService', 'OnlineSecurity', 'OnlineBackup',\n",
-        "              'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies',\n",
-        "              'Contract', 'PaymentMethod']\n",
-        "\n",
-        "# Use get_dummies for One-Hot Encoding. drop_first=True reduces multicollinearity.\n",
-        "df_encoded = pd.get_dummies(df, columns=multi_cols, drop_first=True)\n",
-        "\n",
-        "# 3. Separate Features (X) and Target (y)\n",
-        "X = df_encoded.drop('Churn', axis=1)\n",
-        "y = df_encoded['Churn']\n",
-        "\n",
-        "# 4. Split data into Training and Testing sets (Stratified to handle class imbalance)\n",
-        "# Use a 75/25 split. stratify=y ensures both sets have the same Churn ratio (approx 26.5%).\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42, stratify=y)\n",
-        "\n",
-        "# 5. Feature Scaling (Crucial for Neural Network)\n",
-        "# Identify Numerical Columns for Scaling\n",
-        "scaling_cols = ['tenure', 'MonthlyCharges', 'TotalCharges']\n",
-        "\n",
-        "# Initialize and Fit Scaler\n",
-        "scaler = StandardScaler()\n",
-        "# Fit scaler ONLY on training data to prevent data leakage\n",
-        "scaler.fit(X_train[scaling_cols])\n",
-        "\n",
-        "# Transform both Training and Testing data\n",
-        "X_train[scaling_cols] = scaler.transform(X_train[scaling_cols])\n",
-        "X_test[scaling_cols] = scaler.transform(X_test[scaling_cols])\n",
-        "\n",
-        "print(\"Preprocessing (Encoding and Scaling) Complete.\")\n",
-        "print(f\"Final training set shape: {X_train.shape}\")"
+        "#Train test split\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.25, random_state=42,stratify=y)"
       ],
       "metadata": {
+        "id": "LA2xT7BhVIcA"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Scale numerical columns\n",
+        "scaler = StandardScaler()\n",
+        "scale_cols = ['tenure', 'MonthlyCharges','TotalCharges']\n",
+        "x_train[scale_cols] = scaler.fit_transform(x_train[scale_cols])\n",
+        "x_test[scale_cols] = scaler.fit_transform(x_test[scale_cols])\n",
+        "\n",
+        "print(\"x_train : \",x_train.shape, \"\\nx_test :\",x_test.shape)"
+      ],
+      "metadata": {
+        "id": "3XsENeDBVhTu",
+        "outputId": "8a3ae194-4b31-4ba0-df05-359c1ea03950",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "VsBYw-7Gc5Bh",
-        "outputId": "eb810560-29f6-4ab4-97c0-38105d8fb975"
+        }
       },
-      "execution_count": 23,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Preprocessing (Encoding and Scaling) Complete.\n",
-            "Final training set shape: (5265, 23)\n"
+            "x_train :  (5265, 23) \n",
+            "x_test : (1756, 23)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Decision tree\n"
+      ],
+      "metadata": {
+        "id": "hS_jH8TXW2QN"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
