--- a/Telco_customer_churn_prediction.ipynb
+++ b/Telco_customer_churn_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0OUloYXSHLV5PSwa5CoVY",
+      "authorship_tag": "ABX9TyMtoudX4qdm04LqZm5EkwYj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1554,7 +1554,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 656
+          "height": 649
         },
         "id": "k-pIDYbmvnUk",
         "outputId": "370a5d5c-2167-408a-a476-d38e8cf749a7"
@@ -1658,7 +1658,7 @@
       "cell_type": "code",
       "source": [
         "#Numerical vs Churn\n",
-        "#Churn according to online security\n",
+        "#Churn according to monthly charges\n",
         "plt.figure(figsize=(5,5))\n",
         "sns.boxplot(x = \"Churn\", y = \"MonthlyCharges\", data= df)\n",
         "plt.title(\"Monthly charges distribution by Churn status\")\n",
@@ -2232,7 +2232,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 287
+          "height": 284
         },
         "id": "JCnH9OAhuk7D",
         "outputId": "55c0ee6c-e76c-4405-974f-2e05eb28e09b"
